Autofocus typehead, fix pageload search flicker

--- a/static/style.css
+++ b/static/style.css
@@ -41,6 +41,10 @@ h2 {
   }
 }
 
+#search-input {
+  width: 200px;
+}
+
 #search-add, #remove-button, .r-ingred-btn {
   line-height: 20px;
 }
